# six-morals

./: Makefile  README.md  app.py  dataset.ipynb  model_utils.py  pyproject.toml  training.py  visualize_results.py
