[project]
name = "morals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.11.0",
    "captum>=0.8.0",
    "fire>=0.7.1",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "streamlit>=1.51.0",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "ruff>=0.14.4",
]
